--- a/src/main/java/sample/fxml/PaginaCursant.fxml
+++ b/src/main/java/sample/fxml/PaginaCursant.fxml
@@ -11,14 +11,14 @@
                 <Image url="@../../../resources/paginaCursant.jpg" />
             </image>
         </ImageView>
-        <Text fx:id="nume" layoutX="19.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="561.8759765625">
+        <Text fx:id="nume" layoutX="30.0" layoutY="50.0" strokeType="OUTSIDE" strokeWidth="0.0"  textAlignment="CENTER" wrappingWidth="292.8759765625">
             <font>
                 <Font size="33.0" />
             </font>
         </Text>
-        <Text fx:id="prenume" layoutX="30.0" layoutY="94.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="236.984375">
+        <Text fx:id="prenume" layoutX="288.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0"  textAlignment="CENTER" wrappingWidth="292.8759765625">
             <font>
-                <Font size="15.0" />
+                <Font size="33.0" />
             </font>
         </Text>
         <Text fx:id="email" layoutX="30.0" layoutY="177.0" wrappingWidth="569.0">
