[DEV] Editeaza reteta functionality complete

--- a/src/main/java/sample/fxml/PaginaPrincipalaBucatar.fxml
+++ b/src/main/java/sample/fxml/PaginaPrincipalaBucatar.fxml
@@ -11,8 +11,8 @@
          <image>
             <Image url="@../../../resources/PaginaPrincipalaBucatar.jpg" />
          </image></ImageView>
-      <Button layoutX="451.0" layoutY="207.0" mnemonicParsing="false" text="Editeaza reteta" />
-      <Button fx:id="adaugaField" layoutX="451.0" layoutY="157.0" onAction="#handleAdaugaButtonAction" text=" Adauga reteta" />
+      <Button fx:id="editeazaReteta" layoutX="451.0" layoutY="207.0" onAction="#handleEditeazaReteta"  mnemonicParsing="false" text="Editeaza reteta" />
+      <Button fx:id="adaugaReteta" layoutX="451.0" layoutY="157.0" onAction="#handleAdaugaReteta" text=" Adauga reteta" />
       <Button layoutX="451.0" layoutY="258.0" text="Sterge reteta" />
       <Button fx:id="listaRetete" layoutX="451.0" layoutY="108.0" onAction="#handleVizualizareRetete" text="Vizualizare retete" />
       <Button layoutX="307.0" layoutY="108.0" mnemonicParsing="false" text="Adauga Note" />
