--- a/src/main/java/sample/fxml/PaginaPrincipalaBucatar.fxml
+++ b/src/main/java/sample/fxml/PaginaPrincipalaBucatar.fxml
@@ -33,7 +33,7 @@
          <font>
             <Font name="System Bold" size="18.0" />
          </font></Button>
-      <Button layoutX="469.0" layoutY="223.0" mnemonicParsing="false" text="Adauga Note" />
+      <Button layoutX="469.0" layoutY="223.0" mnemonicParsing="false" onAction="#handleAdaugaNotaAction" text="Adauga Note" />
       <Button layoutX="451.0" layoutY="268.0" mnemonicParsing="false" text="InactivitateCursant" />
        <Button fx:id="schimbaParolaField" layoutX="188.0" layoutY="336.0" mnemonicParsing="false" onAction="#handleSchimbaParola" prefHeight="55.0" prefWidth="211.0" style="-fx-background-color: black;" text="Schimba parola" textAlignment="CENTER" textFill="WHITE" BorderPane.alignment="CENTER">
          <font>
