Situatie note cursant realizata cu succes

--- a/src/main/java/sample/fxml/PaginaPrincipalaCursant.fxml
+++ b/src/main/java/sample/fxml/PaginaPrincipalaCursant.fxml
@@ -21,7 +21,7 @@
          </image>
       </ImageView>
       <Button layoutX="460.0" layoutY="97.0" mnemonicParsing="false" onAction="#handleVizualizareRetete" text="VizualizareRetete" />
-      <Button layoutX="460.0" layoutY="149.0" mnemonicParsing="false" text="VizualizareSituatie" />
+      <Button layoutX="460.0" layoutY="149.0" mnemonicParsing="false" onAction="#handleVizualizareSituatieNote" text="VizualizareSituatie" />
       <Button layoutX="460.0" layoutY="212.0" mnemonicParsing="false" text="RetetePreferate" />
       <Button fx:id="schimbaParolaField" layoutX="481.0" layoutY="339.0" mnemonicParsing="false" onAction="#handleSchimbaParola" text="schimbaParola"/>
    </children>
