--- a/src/main/java/sample/fxml/PaginaPrincipalaCursant.fxml
+++ b/src/main/java/sample/fxml/PaginaPrincipalaCursant.fxml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: FFC;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controllers.RegistrationControllerCursant">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: FFC;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controllers.RegistrationControllerCursant">
    <children>
+      <ImageView fitHeight="410.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../../resources/PaginaPrincipalaCursant.jpg" />
+         </image>
+      </ImageView>
       <Text layoutX="24.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Activitati Cursant" textAlignment="CENTER" wrappingWidth="343.13671875">
          <font>
             <Font name="Freehand521 BT" size="40.0" />
          </font>
       </Text>
-      <ImageView fitHeight="410.0" fitWidth="600.0" layoutY="68.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../resources/PaginaPrincipalaCursant.jpg" />
-         </image>
-      </ImageView>
       <Button layoutX="460.0" layoutY="97.0" mnemonicParsing="false" onAction="#handleVizualizareRetete" text="VizualizareRetete" />
       <Button layoutX="460.0" layoutY="149.0" mnemonicParsing="false" onAction="#handleVizualizareSituatieNote" text="VizualizareSituatie" />
-      <Button layoutX="460.0" layoutY="212.0" mnemonicParsing="false" text="RetetePreferate" />
-      <Button fx:id="schimbaParolaField" layoutX="481.0" layoutY="339.0" mnemonicParsing="false" onAction="#handleSchimbaParola" text="schimbaParola"/>
+      <Button layoutX="460.0" layoutY="212.0" mnemonicParsing="false" onAction="#handleAdaugaReteteFavorite" text="RetetePreferate" />
+      <Button fx:id="schimbaParolaField" layoutX="481.0" layoutY="339.0" mnemonicParsing="false" onAction="#handleSchimbaParola" text="schimbaParola" />
+      <Button layoutX="418.0" layoutY="269.0" mnemonicParsing="false" onAction="#handleVizualizareReteteFavorite" text="VizualizareReteteFavorite" />
+
    </children>
 </Pane>
