--- a/src/main/java/sample/fxml/PaginaPrincipalaBucatar.fxml
+++ b/src/main/java/sample/fxml/PaginaPrincipalaBucatar.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controllers.RegistrationControllerBucatar">
@@ -11,7 +12,7 @@
          <image>
             <Image url="@../../../resources/PaginaPrincipalaBucatar.jpg" />
          </image></ImageView>
-      <Button fx:id="adaugaReteta" layoutX="19.0" layoutY="167.0" onAction="#handleAdaugaReteta" prefHeight="45.0" prefWidth="200.0" style="-fx-background-color: black;" text=" Adauga reteta" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="adaugaReteta" layoutX="41.0" layoutY="300.0" onAction="#handleAdaugaReteta" prefHeight="45.0" prefWidth="200.0" style="-fx-background-color: black;" text="  Adauga reteta" textAlignment="CENTER" textFill="WHITE">
          <graphic>
             <ImageView fitHeight="34.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -22,7 +23,10 @@
          <font>
             <Font name="System Bold" size="18.0" />
          </font></Button>
-      <Button fx:id="listaRetete" layoutX="18.0" layoutY="105.0" onAction="#handleVizualizareRetete" prefHeight="47.0" prefWidth="200.0" style="-fx-background-color: black;" text="Toate retetele" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="listaRetete" layoutX="40.0" layoutY="208.0" onAction="#handleVizualizareRetete" prefHeight="47.0" prefWidth="200.0" style="-fx-background-color: black;" text="  Toate retetele" textAlignment="CENTER" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
          <graphic>
             <ImageView fitHeight="36.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -30,11 +34,8 @@
                </image>
             </ImageView>
          </graphic>
-         <font>
-            <Font name="System Bold" size="18.0" />
-         </font>
       </Button>
-      <Button fx:id="schimbaParolaField" layoutX="19.0" layoutY="327.0" mnemonicParsing="false" onAction="#handleSchimbaParola" prefHeight="47.0" prefWidth="200.0" style="-fx-background-color: black;" text="Schimba parola" textAlignment="CENTER" textFill="WHITE" BorderPane.alignment="CENTER">
+      <Button fx:id="schimbaParolaField" layoutX="355.0" layoutY="297.0" mnemonicParsing="false" onAction="#handleSchimbaParola" prefHeight="47.0" prefWidth="200.0" style="-fx-background-color: black;" text="Schimba parola" textAlignment="CENTER" textFill="WHITE" BorderPane.alignment="CENTER">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
@@ -45,7 +46,7 @@
                </image>
             </ImageView>
          </graphic></Button>
-      <Button fx:id="listaCursanti" layoutX="19.0" layoutY="227.0" mnemonicParsing="false" onAction="#handleVizualizareCursanti" prefHeight="45.0" prefWidth="200.0" style="-fx-background-color: black;" text="Toti cursantii" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="listaCursanti" layoutX="357.0" layoutY="210.0" mnemonicParsing="false" onAction="#handleVizualizareCursanti" prefHeight="45.0" prefWidth="200.0" style="-fx-background-color: black;" text="  Toti cursantii" textAlignment="CENTER" textFill="WHITE">
          <graphic>
             <ImageView fitHeight="33.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -56,9 +57,15 @@
          <font>
             <Font name="System Bold" size="19.0" />
          </font></Button>
-      <Text fill="#fffafa" layoutX="121.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Activitati Bucatar" textAlignment="CENTER" wrappingWidth="387.625">
+      <Text fill="#fffafa" layoutX="113.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Chef`s Squad" textAlignment="CENTER" wrappingWidth="387.625">
          <font>
             <Font name="System Bold" size="40.0" />
+         </font>
+      </Text>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="43.0" layoutX="-4.0" layoutY="101.0" stroke="BLACK" strokeType="INSIDE" width="608.0" />
+      <Text fx:id="numeBucatar" fill="WHITE" layoutX="91.0" layoutY="139.0" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="448.625">
+         <font>
+            <Font name="System Bold" size="32.0" />
          </font>
       </Text>
    </children>
