--- a/src/main/java/sample/fxml/login.fxml
+++ b/src/main/java/sample/fxml/login.fxml
@@ -25,7 +25,7 @@
             <Font size="20.0" />
          </font>
       </PasswordField>
-      <Button layoutX="250.0" layoutY="261.0" mnemonicParsing="false" onAction="#handleLoginButtonAction" prefHeight="24.0" prefWidth="130.0" style="-fx-background-color: white; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px;" text="Autentificare" textFill="#f80000" wrapText="true">
+      <Button fx:id="loginButton" layoutX="250.0" layoutY="261.0" mnemonicParsing="false" onAction="#handleLoginButtonAction" prefHeight="24.0" prefWidth="130.0" style="-fx-background-color: white; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px;" text="Autentificare" textFill="#f80000" wrapText="true">
          <font>
             <Font name="System Bold" size="17.0" />
          </font>
@@ -45,12 +45,13 @@
             <Font size="20.0" />
          </font>
       </TextField>
-      <Text fx:id="loginMessage" layoutX="437.0" layoutY="111.0" wrappingWidth="107.0" />
+      <Text fx:id="loginMessage" layoutX="469.0" layoutY="159.0" wrappingWidth="107.0" />
       <ChoiceBox fx:id="roleField" layoutX="176.0" layoutY="200.0" prefHeight="33.0" prefWidth="249.0" style="-fx-background-color: white;" AnchorPane.topAnchor="200.0" />
       <Text layoutX="246.0" layoutY="76.0" style="-fx-background-color: transparent;" text="Autentificare" wrappingWidth="120.0">
          <font>
             <Font name="Berlin Sans FB" size="22.0" />
          </font>
       </Text>
+      <Text fx:id="loginMessage1" layoutX="404.0" layoutY="61.0" wrappingWidth="107.0" />
    </children>
 </AnchorPane>
